# claude_desktop_trafficlight

./: .gitignore  CLAUDE.md  README-zh.md  README.md  build.cmd  dev.command  package-lock.json  package.json  run.cmd  start-dev.cmd
.claude/: settings.json  settings.local.json
scripts/: overlay-hook.bat  overlay-hook.sh
skins/default/: theme.json
skins/glass/: theme.json
skins/minimal/: theme.json
skins/neon/: theme.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: detector.rs  file_watcher.rs  i18n.rs  lib.rs  main.rs  monitor.rs  setup.rs  skins.rs  state.rs
src/lib/: SkinManager.ts  StatusText.svelte  TrafficLight.svelte  types.ts
src/routes/: +page.svelte
src/routes/menu/: +page.svelte
