[package]
name = "claude-code-overlay"
version = "0.1.0"
description = "Semi-transparent desktop traffic light widget monitoring Claude Code CLI status"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_code_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = [] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
